--- a/app/assets/stylesheets/application/courses.scss
+++ b/app/assets/stylesheets/application/courses.scss
@@ -113,6 +113,8 @@ body.courses__index, body.courses__learning_center, body.teachers__index {
   .modal-body {
     min-height: 500px;
   }
+  //==============================
+  //珠宝课程教学条件样式
 }
 
 //申报材料模态框样式
