--- a/app/views/courses/3/_course_home.html.erb
+++ b/app/views/courses/3/_course_home.html.erb
@@ -3,12 +3,13 @@
 <div class="container-fluid">
   <dl>
   		<dt>1.课程设计的理念</dt>
-        <dd>本课程以国家职业资格网络设备工程师的职业标准为依据，根据高校人才培养计划，结合高校人才培养目标和当前行业需求，采用准企业化管理及学习方式，与企业共同开发教学解决方案，分层次、阶梯式逐步加强学生实践能力和创新精神的培养，加深理论知识的理解和贯通的同时，进行综合能力培养，并积累一定的实际项目开发和项目管理经验。</dd>
+        <dd>随着经济全球化和商品化时代的到来，首饰设计的市场化和商业化也是顺应时代发展的大趋势。首饰手绘设计作为一门介于艺术和商业之间的特殊技能，它不但要体现设计者本身的情绪表达和艺术创造，而且也要顺应市场的需求，考虑生产成本和盈利等商业因素。<br>
+        因此高职院校珠宝专业的首饰手绘设计教学，在提高学生的设计能力、创作能力、审美能力的同时，还要提高学生适应市场需求、捕捉时尚趋势的能力。因此，《首饰手绘设计》课程的设计理念是：服务于专业培养目标和定位，将职业岗位群的核心能力和具体工作过程融入到课程设计中，开展任务驱动、项目导向和教学做一体化的教学模式改革，突出教学过程的实践性、开放性和职业性，融“教、学、做”为一体，提高学生的职业技能和职业素质。</dd>
         <dt>2.课程设计的思路</dt>
-        <dd>1.本课程以国家职业资格网络设备工程师的职业标准为依据，根据高校人才培养计划，结合高校人才培养目标和当前行业需求，采用准企业化管理及学习方式，与企业共同开发教学解决方案，分层次、阶梯式逐步加强学生实践能力和创新精神的培养，<br><br>
-        2.加深理论知识的理解和贯通的同时，进行综合能力培养，并积累一定的实际项目开发和项目管理经验。<br><br>
-				3.本课程以国家职业资格网络设备工程师的职业标准为依据，根据高校人才培养计划，结合高校人才培养目标和当前行业需求，采用准企业化管理及学习方式，与企业共同开发教学解决方案，分层次、阶梯式逐步加强学生实践能力和创新精神的培养，<br><br>
-				4.加深理论知识的理解和贯通的同时，进行综合能力培养，并积累一定的实际项目开发和项目管理经验。<br><br>
+        <dd>1.以企业设计项目引领课程教学的实施。根据珠宝首饰企业的设计任务，通过完成一个设计项目以获得设计手绘效果图而进行的一个完整的教学程序。这种项目化的课程体系，实施“教、学、做”一体化教学，有利于学生综合职业能力和素质的培养，达到了高素质技能型专门人才的培养目标，使学生就业后能更快地融入企业实际工作中。<br><br>
+        2.聘请意大利首饰设计师毛立秋先生（2015年上海市海外名师）为学生讲授先进的欧洲首饰设计基本方法、手绘技能和设计理念，将欧洲首饰手绘的基本方法融入到《首饰手绘设计》课程教学中。<br><br>
+				3.运用比赛来代替传统封闭的首饰设计实践技能训练，每年参加2-3个具有一定影响力的首饰设计大赛和职业技能大赛，如上海新锐首饰设计大赛、上海首饰设计大赛和首饰设计师职业技能大赛，以比赛要求的设计环境进行全新的首饰手绘教学。<br><br>
+				4.在首饰手绘设计教学中引入商业首设设计，指导学生掌握商业首饰设计的原则：以服务大众、占领市场为目的进行设计创作，还必须要适应大批量机械化生产的要求。<br><br>
         </dd>
   </dl>
 </div>
