--- a/app/views/courses/3/_teach_content.html.erb
+++ b/app/views/courses/3/_teach_content.html.erb
@@ -1,87 +1,30 @@
 <dl>
-  <dd class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 教学内容的针对性与适用性</dd>
+  <dd class="entry-content-title">
+    <span class="glyphicon glyphicon-triangle-bottom"></span> 教学内容的针对性与适用性
+  </dd>
   <div class="container-fluid">
     <dt>1.教学内容</dt>
-    <dd>本课程的教学内容如下:</dd>
-    <dd>(1)录制教学演示录像</dd>
-    <dd>(2)录制教学演示录像</dd>
-    <dd>(3)录制教学演示录像</dd>
-    <dd>(4)录制教学演示录像</dd>
-    <dd>(5)录制教学演示录像</dd>
-    <dd>(6)录制教学演示录像</dd>
-    <dd>(7)录制教学演示录像</dd>
+      <dd>本课程的教学内容如下:</dd>
+      <dd>(1)首饰设计的基本概念，首饰手绘能力培养的重要性，绘画时所需的工具，首  饰手绘技能的基本方法</dd>
+      <dd>(2)曲线造型及直线造型的准确性及熟练性。</dd>
+      <dd>(3)首饰的空间立体讲解分析、首饰的结构性分析。/dd>
+      <dd>(4)金属及宝石的基本属性、首饰配件及各部件的结构绘制。</dd>
+      <dd>(5)常见镶嵌方式的讲解、常见首饰配饰的结构性画法。</dd>
+      <dd>(6)首饰的三视图绘制方法。</dd>
+      <dd>(7)当代首饰发展现状和趋势。</dd>
+    <dt>2.教学内容选取的针对性</dt>
+      <dd>（1）以高职培养目标为依据——选择教学内容<br>
+      教学内容的选择依照企业需求和高技能人才培养目标，它所培养的学生必须能够有效地完成工作任务。因此，按照珠宝企业实际的首饰手绘过程——接单、设计构思、手绘效果图并完成设计图稿组织教学内容，这能更好地突出职业能力的培养，实现与企业工作岗位零距离对接。</dd>
+      <dd>（2）对接欧洲首饰设计标准——建立全新的教学方法<br>
+      聘请意大利首饰设计师毛立秋先生（2015年上海市海外名师）为学生授课，使学生了解设计中首饰形态的重要性，学会创造新图形并对其塑造和丰富的步骤方法；让学生了解西方首饰文化及背景的意义；了解意大利高档首饰设计的基本规则，学习如何从无到有的创意设计方法即从无意识的图形寻找到有意识的图形调整直至首饰成品设计完成的过程。形成融合中西方首饰设计理念和技法的全新教学方法。</dd>
+      <dd>（3）以企业实际设计过程和情境----组织教学过程<br>
+      以珠宝首饰企业设计项目为教学模块，将首饰手绘的各主要知识点融合到若干项目化模块中，让学生在完成项目的过程中掌握首饰手绘的基本理念和手绘技能，并形成良好的首饰手绘习惯，同时培养学生的自主学习和创新能力，为其成长为一名合格的首饰手绘技术人员奠定良好的基础。</dd>
+      <dd>（4）“以赛带练”与商业首饰设计相融合----设计教学活动<br>
+      选取一些典型的首饰产品设计案例，让学生熟悉首饰产品设计的理念、方法和技巧；根据首饰设计大赛的要求设计教学活动，为此，我们将商业首饰设计和首饰设计大赛相融合，建立实际设计任务与知识、技能的联系，增强了学生的直观体验，激发了学生的学习兴趣。</dd>
+      <dd>（5）以职业技能鉴定为标准----强化技能训练<br>
+      在课程开发中，我们紧密结合高级首饰设计师中相关考核项目，提高首饰手绘技能，使学生能够用手绘的方式较准确表达自己的设计思维，在三视图绘制、形体结构的正确性、美观度、首饰材料质感表现等各方面得到整体提升，达到职业证书考试标准的相关要求。</dd>
+    <dt>3. 教学内容选取的适用性</dt>
+      <dd>本课程教学内容充分体现珠宝首饰企业职业岗位实际工作所需素质、能力、知识等要求。同时在项目活动载体的选择上，也充分考虑了珠宝首饰企业未来发展的趋势，为学生可持续发展提供了必要的知识储备。在教学内容选取过程中，紧密联系珠宝首饰企业工作环境，既考虑到知识结构的系统性、完整性，为学生持续学习奠定基础。又注重学生技能训练的专业性、实践性，为学生上岗就业提供保证。还兼顾学生实现学历证书和职业资格证书“双证书”就业的实际要求。</dd>
   </div>
-  <dd class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 教学内容的组织与安排</dd>
-  <div class="container-fluid">
-    <dd>1. 教学内容的组织</dd>
-    <p>教学内容的组织以项目实践教学为主，通过项目实践的手段，真实再现企业iOS界面开发理念。教学内容组织过程中让学员自己通过对案例的理解与分析，以及在团队开发中的共同讨论，促使学员进入特定的iOS界面开发情景与过程，建立真实的开发环境和培养规范化的开发规范。</p>
-    <dd>实施过程：</dd>
-    <dd>
-      <p>（1）项目选择和学生分组。以项目来划分项目组。建立对不同岗位需求与角色的认知，并以平时成绩平均安排每个小组的技术实力。</p>
-      <p>（2）实践项目模拟企业真实的小型项目，这些项目真实且有社会效益，规模和难度适中，容易理解，可以激发学生的开发兴趣。</p>
-      <p>（3）必要的理论合理的融入项目阶段需求进行讲授，同时分解项目的各项子任务进行练习，边学边练、学以致用，减少纯理论知识的讲解。</p>
-    </dd>
-    <dd>2. 课程安排</dd>
-  </dl>
-  <div class="entry-content-table">
-    <table class="table table-bordered">
-      <thead>
-        <tr class="active">
-          <th>总课时</th>
-          <th>开课时间</th>
-          <th>有效期至</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td >353</td>
-          <td>2015.04.20</td>
-          <td>2016.07.20</td>
-        </tr>
-      </tbody>
-    </table>
-    <table class="table table-bordered">
-      <thead>
-        <tr class="danger">
-          <th>授课内容</th>
-          <th>课时</th>
-          <th>单课时长</th>
-          <th>学习频率</th>
-          <th>上课方式</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="active">
-          <td>课程</td>
-          <td>36</td>
-          <td>20分钟</td>
-          <td>每周四节</td>
-          <td>随时学，反复学<br>也可下载到手机，ipad离线学</td>
-        </tr>
-        <tr>
-          <td>训练课</td>
-          <td>36</td>
-          <td>20分钟</td>
-          <td>每周1节</td>
-          <td rowspan="4">预约上课，pc，手机，ipad都支持</td>
-        </tr>
-        <% (0..2).each do |index|%>
-        <tr>
-          <td>训练课</td>
-          <td>36</td>
-          <td>20分钟</td>
-          <td>每周1节</td>
-        </tr>
-        <% end %>
-        <tr class="active">
-          <td>阶段评估体系</td>
-          <td>36</td>
-          <td>25分钟</td>
-          <td>每周一次</td>
-          <td>测试评估系统</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+</dl>
 <%= link_to "展开", "javascript:void(0)", class: "drop-down-arrow"%>
