--- a/app/views/courses/3/_course_content.html.erb
+++ b/app/views/courses/3/_course_content.html.erb
@@ -1,1 +1,52 @@
-_course_content.html.erb
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-nav"><strong>教学内容的具体表现形式</strong></a>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-nav"><strong>教学内容的针对性与适用性</strong></a>
+<a href="javascript:void(0)" class="btn course-content-nav"><strong>教学内容的组织与安排</strong></a>
+<br><br>
+<div class="container-fluid course-content-div">
+	<dl>
+		<dt style="color:#5086C5">1.编写适合高职珠宝专业的《首饰手绘设计》教材</dt>
+		<dd>根据企业首饰手绘设计工作过程的项目化任务要求编写《首饰手绘设计》教材。教材内容根据首饰手绘设计工作过程，将工作过程分解为若干个实训项目，这些项目基本涵盖了首饰手绘设计的技能要求和知识要求，内容具有先进性、实用性，实践操作性强，能够满足课程培养目标的需要。该教材正在编写中，并将于2015年底交出版社正式出版。
+		</dd>
+		<dt style="color:#5086C5">2.配套教学课件、教学录像</dt>
+		<dd>本课程目前已经完成基于工作过程的《首饰手绘设计》、《贵金属首饰手工制作中级工工实践与指导》、《电脑首饰设计》、《欧洲首饰设计的审美与细节处理》、《花丝首饰的设计与制作》教学课件5套，教学录像1部。</dd>
+		<dt style="color:#5086C5">3. 教学案列</dt>
+		<dd>本课程依托欧洲米兰ADOR协会中心相关真实项目来设计教学案例，确保课程教学内容与实际工作岗位的很好对接。</dd>
+		<dt style="color:#5086C5">4.工作任务单、评价表</dt>
+		<dd>本课程以课堂、实训室一体化模式实施教学，因此教学团队共同设计制作了基于工作过程的课程教学工作任务单，其中包括了工作任务名称、来源、步骤、要求、完成时间、注意事项等具体要求，另外，还分别针对教师、学生设计了教学和学习评价表。</dd>
+		<dt style="color:#5086C5">5. 学习指南</dt>
+		<dd>提供丰富的学习指南。向学生推荐有参考意义的书目、图文资料、专业网站等学习资源，方便学生通过多种方式科学进入学习情景，掌握课程核心内容。
+		安排适量真实的蜡模制作任务，供学生在学习过程中和课程结束后巩固练习，用于学生技能的课外拓展，让学生进行思考和研究，帮助学生尽快进入较理想的自主学习状态。</dd>
+	</dl>
+</div>
+<div class="container-fluid course-content-div" style="display: none;">
+  <dt style="color:#5086C5">1.教学内容</dt>
+    <dd>本课程的教学内容如下:</dd>
+    <dd>(1)首饰设计的基本概念，首饰手绘能力培养的重要性，绘画时所需的工具，首  饰手绘技能的基本方法</dd>
+    <dd>(2)曲线造型及直线造型的准确性及熟练性。</dd>
+    <dd>(3)首饰的空间立体讲解分析、首饰的结构性分析。/dd>
+    <dd>(4)金属及宝石的基本属性、首饰配件及各部件的结构绘制。</dd>
+    <dd>(5)常见镶嵌方式的讲解、常见首饰配饰的结构性画法。</dd>
+    <dd>(6)首饰的三视图绘制方法。</dd>
+    <dd>(7)当代首饰发展现状和趋势。</dd>
+  <dt style="color:#5086C5">2.教学内容选取的针对性</dt>
+    <dd>（1）以高职培养目标为依据——选择教学内容<br>
+    教学内容的选择依照企业需求和高技能人才培养目标，它所培养的学生必须能够有效地完成工作任务。因此，按照珠宝企业实际的首饰手绘过程——接单、设计构思、手绘效果图并完成设计图稿组织教学内容，这能更好地突出职业能力的培养，实现与企业工作岗位零距离对接。</dd>
+    <dd>（2）对接欧洲首饰设计标准——建立全新的教学方法<br>
+    聘请意大利首饰设计师毛立秋先生（2015年上海市海外名师）为学生授课，使学生了解设计中首饰形态的重要性，学会创造新图形并对其塑造和丰富的步骤方法；让学生了解西方首饰文化及背景的意义；了解意大利高档首饰设计的基本规则，学习如何从无到有的创意设计方法即从无意识的图形寻找到有意识的图形调整直至首饰成品设计完成的过程。形成融合中西方首饰设计理念和技法的全新教学方法。</dd>
+    <dd>（3）以企业实际设计过程和情境----组织教学过程<br>
+    以珠宝首饰企业设计项目为教学模块，将首饰手绘的各主要知识点融合到若干项目化模块中，让学生在完成项目的过程中掌握首饰手绘的基本理念和手绘技能，并形成良好的首饰手绘习惯，同时培养学生的自主学习和创新能力，为其成长为一名合格的首饰手绘技术人员奠定良好的基础。</dd>
+    <dd>（4）“以赛带练”与商业首饰设计相融合----设计教学活动<br>
+    选取一些典型的首饰产品设计案例，让学生熟悉首饰产品设计的理念、方法和技巧；根据首饰设计大赛的要求设计教学活动，为此，我们将商业首饰设计和首饰设计大赛相融合，建立实际设计任务与知识、技能的联系，增强了学生的直观体验，激发了学生的学习兴趣。</dd>
+    <dd>（5）以职业技能鉴定为标准----强化技能训练<br>
+    在课程开发中，我们紧密结合高级首饰设计师中相关考核项目，提高首饰手绘技能，使学生能够用手绘的方式较准确表达自己的设计思维，在三视图绘制、形体结构的正确性、美观度、首饰材料质感表现等各方面得到整体提升，达到职业证书考试标准的相关要求。</dd>
+  <dt style="color:#5086C5">3. 教学内容选取的适用性</dt>
+    <dd>本课程教学内容充分体现珠宝首饰企业职业岗位实际工作所需素质、能力、知识等要求。同时在项目活动载体的选择上，也充分考虑了珠宝首饰企业未来发展的趋势，为学生可持续发展提供了必要的知识储备。在教学内容选取过程中，紧密联系珠宝首饰企业工作环境，既考虑到知识结构的系统性、完整性，为学生持续学习奠定基础。又注重学生技能训练的专业性、实践性，为学生上岗就业提供保证。还兼顾学生实现学历证书和职业资格证书“双证书”就业的实际要求。</dd>
+</div>
+<div class="container-fluid course-content-div" style="display: none;">
+	<dl>
+		<dt style="color:#5086C5">1．教学内容的组织</dt>
+		<dd>教学内容的组织遵循学生职业能力培养的基本规律，以真实工作任务及其工作过程为依据整合、优化教学内容，科学设计项目性工作任务，突出教学过程的实践性、开放性和职业性，融“教、学、做”为一体，提高学生的职业技能和职业素质。</dd>
+		<dt style="color:#5086C5">2.教学内容的安排</dt>
+		<dd>具体教学内容安排如下表：</dd>
+	</dl>
+</div>
