--- a/app/views/courses/3/_course_effect.html.erb
+++ b/app/views/courses/3/_course_effect.html.erb
@@ -1,1 +1,40 @@
-_course_effect.html.erb
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-effect-nav"><strong>社会认可度</strong></a>
+<a href="javascript:void(0)" class="btn course-content-effect-nav"><strong>各类评价</strong></a>
+<br><br>
+<div class="course-content-effect-div">
+  <p>进行严格、规范、与社会接轨的职业技能考证是高职院校培养出来的高技能人才得到社会认可的关键。多年来本专业始终将报考“高级首饰设计师”职业资格证书的培训和辅导纳入到教学计划中，将高技能人才素质所要求的理论知识融入本专业的《首饰手绘设计》课程中，加强高技能人才基本知识和技能的训练，强化实验、实训和综合性训练，使多数学生在毕业时能获得“高级首饰设计师”职业资格证书。近三年“高级首饰设计师”职业资格证书通过率分别为：2010级73.65%，2011级78.72%，2012级83.68%。</p>
+</div>
+
+<div class="course-content-effect-div" style="display: none;">
+  <dl>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span>校外专家评价</p>
+    <div class="container-fluid">
+      <dt><h5 style="margin:20px 0">上海市工艺美术协会秘书长，上海市政府特聘工艺美术政策研究专家，上海市工艺美术大师评审委员会主任朱建中的评价</h5></dt>
+      <dd>上海工商职业技术学院珠宝专业的《首饰手绘设计》课程是上海同类院校中名利前茅的很有特色的核心课程，其教学实践丰富，教学体系完整，课程结构合理，教学模式先进，教学理念超前，教学内容与行业发展紧密结合，教学方法有特色，特别是实践教学环境具有较好的实践意义。<br>
+			该课程在课程建设与专业建设上进行了了大胆创新和尝试，该课程能为行业企业所需首饰设计人才提供合格的人才，该校的教师队伍结构合理，聘请了意大利首饰设计师毛利秋（上海市海外名师）作为专业带头人，还有在行业中从事首饰设计几十年的设计师作为骨干教师，也有国内著名珠宝学院毕业的研究生，有来自企业一线的高级技能的中年教师。
+			该校毕业的学生就业状况良好，毕业生获得了行业企业的欢迎和好评，多位学生在国内外的首饰设计比赛中获得了优异的成绩，充分体现了高职教育应用型人才的培养效果，展现了高职教育技能型人才的培养特色。</dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span>行业企业专家评价</p>
+    <div class="container-fluid">
+      <dt><h5 style="margin:20px 0">上海老凤祥有限公司首饰设计大师工作室中心主任，上海工艺美术大师、高级工艺美术师瞿建国的评价</h5></dt>
+      <dd>上海工商职业技术学院珠宝专业的《首饰手绘设计》课程办的很有特色，该课程具有很强的实用性、适用性、完整性和发展性，教学资料完整详实，并积极推行任务引领，教、学、实、理一体化的教学模式，并充分运用现代教学设施，科学运用教学规律，教学手段不断丰富，教学资源有效整合，课程能为学生的职业生涯打下良好的基础。<br>
+			老凤祥首饰大师工作室已有4位上海工商职业技术学院毕业的在岗设计师，这些年轻设计师及时补充了老凤祥设计队伍的新鲜血液，并代表上海老凤祥有限公司获得了多项国内外首饰设计大奖，这些年轻设计师在新产品开发上，不断创新，兢兢业业，及时摸准 市场需求，开发了一系列受市场欢迎的首饰产品。在学生顶岗实习过程中，学生熟悉业务流程，有着实际的分析问题解决问题的能力，毕业生很受企业的欢迎，特别是《首饰手绘设计》课程教学对学生的技能提高和职业发展起到十分明显的促进作用，教学过程完成贴合职业岗位所需。</dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span>校内教学督导组评价</p>
+    <div class="container-fluid">
+      <dt><h5 style="margin:20px 0">上海工商职业技术学院教务处处长，高校评估专家，从教工作40年，长期担任教学管理和行政管理工作的胡家秀教授的评价
+			</h5></dt>
+      <dd>《首饰手绘设计》是上海工商职业技术学院珠宝专业的核心课程，课程开发的历史较早，2002年就设置了本课程，是全国高职珠宝专业中最早开发此课程的院校之一，课程内容、课程标准、课程计划通过十几年的积累，已经成为本专业的特色课程，通过了十几年的教学实践已经硕果累累，学生在国内外首饰设计大赛中累获佳绩，学生的就业前景良好，已经获得行业与企业的广泛认可和好评。<br>
+			该课程师资队伍结构合理，高级职称与双师型结构突出，师资队伍综合素质优秀，在十几年的课程建设中，由著名企业一线的设计师直接参与建设，教学中积累了丰富的经验。本专业在政府扶持资金的支持下，已建成了珠宝玉石鉴定实训室、宝玉石检测中心、钻石鉴定与分级实训室、珠宝首饰设计实训室、贵金属镶嵌制作实训室、宝石切磨实训室、海派玉雕大师工作室和小型生产车间、小型贵金属首饰制作生产车间，以及以钻石、彩色宝石、玉石、珍珠和银饰销售为主并兼有设计订做服务的“艾达珠宝”商店。为《首饰手绘设计》这一门教、学、理、实一体的课程创造了实训条件。<br>
+			此门精品课程的设计理念包含高职高专学生的培养目标，教学内容丰富，能遵循学生的认识规律和职业成长需求，以学生为主体，因材施教。
+			</dd>
+    </div>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span>校内教学督导组评价</p>
+    <div class="container-fluid">
+			<p>我们喜欢上《首饰手绘设计》这门课，因为老师在教学中着重素质教育和能力培养，并以首饰设计师的职业发展为教学基础，结合参加国内外首饰设计大赛、技能训练和综合实习，把理论与实践较好联系起来，使我们学生既能掌握首饰手绘设计的基本原理和技能，又能学会从事企业首饰设计工作的产品开发技能。 <br>
+			在这门课程的教学过程中，我们老师改变了以前传统的教师唱独角戏式的满堂灌的教学方法，创造了师生互动，理论和实践相结合，知识传授与技能培养并重的教学方法。老师还征求我们的建议和意见，坚持突出实践性教学这个重点，并根据学生意见适当调整课时分配比例，理论讲授与实践训练之间的课程比例为3:7，充分体现了以职业发展为导向，职业技能为抓手，促进学生天天进步，服务学生为本的理念，也体现了高职教育的人才培养特色，我们非常感谢珠宝专业老师教会了我们很多知识和技能，为我们今天的职业发展提供了很好的教学资源。</p>
+    </div>
+  </dl>
+</div>
