--- a/app/views/courses/3/_course_method.html.erb
+++ b/app/views/courses/3/_course_method.html.erb
@@ -1,1 +1,57 @@
-_course_method.html.erb
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-method-nav"><strong>网络教学资源和硬件环境</strong></a>
+<a href="javascript:void(0)" class="btn course-content-method-nav"><strong>现代教学技术手段的应用</strong></a>
+<a href="javascript:void(0)" class="btn course-content-method-nav"><strong>多种教学方法的运用</strong></a>
+<a href="javascript:void(0)" class="btn course-content-method-nav"><strong>教学模式的设计与创新</strong></a>
+<br><br>
+<div class="contrainer-fluid course-content-method-div">
+	<p style="margin-bottom:20px">1.完成了教室的现代化教育技术改造，实现了无线覆盖，教师可以通过这个平台进行示范性的授课，教师和学生可以利用无线网络进行资料、文献检索，形成师生教学互动。</p>
+	<p style="margin-bottom:20px">2.配有网络教学的计算机实训室2个，配置84台计算机，可满足4个班级学生学习。</p>
+	<p style="margin-bottom:20px">3.建立并开通《首饰手绘设计》网络教学网站；依据上海市精品课程评审指标要求确立网站架构；已经具备的教学资源包括：课程设置、教学内容、教学方法与手段、教学队伍、实践教学、教学效果、课程特色等与本课程教学改革相关的内容；全部教学文件以及丰富的学生作业参考。</p>
+	<p style="margin-bottom:20px">校园网已建设好，目前已实现万兆到楼，重点部位千兆到桌面，所有办公室和学生宿舍均百兆到桌面，能满足师生通过网络平台进行互动交流和学生的自主学习。</p>
+</div>
+
+<div class="contrainer-fluid course-content-method-div" style="display: none;">
+	<dl>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在《首饰手绘设计》课程的教学过程中，将传统教学手段和多媒体教学手段相结合，充分运用现代教育技术等多元化教学手段，开展多种形式教学，让学生在“看、听、说、做”中学习，加深对所学知识的理解和运用，充分激发学生的学习兴趣，提高教学效果。</dd>
+		<dt style="color:#5086C5">1．建立经典作品多媒体图库</dt>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;图库收集了近千幅优秀作品，内容涉及国内外首饰手绘设计的实例作品、图片内容涉及面广、可视性和直观性强、参考价值高。</dd>
+		<dt style="color:#5086C5">2．制作多媒体课件</dt>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本课程目前已经完成基于工作过程的《首饰三视图、剖面图、局部放大制图方法》、《透视与首饰手绘立体图画法》、《珠宝首饰设计的各阶段设计过程方法》、《首饰设计的元素的采集与整理》、《首饰设计的设计稿设计说明撰写》《宝石琢形、镶口、配件画法》等教学课件15套。
+		</dd>
+		<dt style="color:#5086C5">3．采用视频教学</dt>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;利用现代传媒技术播放首饰手绘设计技法及过程，将首饰手绘设计过程全面地展现出来，精彩的讲解和清晰的视频影像结合，帮助学生直观了解，给学生一种身临其境的感受。</dd>
+		<dt style="color:#5086C5">4 . 校园网络教学环境</dt>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本课程依托学院网络教学评价体系建立了网络教学，充分运用现代信息技术和网络技术等手段，改革传统的教学观念、教学模式、教学方法和教学手段。在校内宽带网络的支持下，使学生可在网上学习浏览，互动问答，批改作业，查阅学生成绩和学分。利用互联网的设计资源，进一步扩充了学生的专业设计学习资料。</dd>
+	</dl>
+</div>
+
+<div class="contrainer-fluid course-content-method-div" style="display: none;">
+	<dl>
+		<dd> 为了提高高职学生主动学习的积极性，提高学习效率，在《首饰手绘设计》课程中采用了以下教学方法：<dd>
+		<dt style="color:#5086C5">1.案例教学法</dt>
+		<dd>在教学过程中，教师选取几个典型的、真实的生产性案例导入到教学中，再根据课程内容中应掌握的技能和知识，进行案例解析。学生通过观摩、讨论、分析，加深了对课程内容的理解和兴趣。</dd>
+		<dt style="color:#5086C5">2.项目教学法</dt>
+		<dd>本课程的教学内容以若干项目为引导，由简入繁、逐步深入，每个项目提出具体的项目要求和实训任务，学生根据要求在规定的时间内完成任务，教师则根据学生完成作业的质量、数量，以及作业转化成产品的成功率来进行考核。
+		</dd>
+		<dt style="color:#5086C5">3.角色转换法</dt>
+		<dd>本课程在实施“项目化”教学过程中，教师与学生之间不再是单纯的师生关系，而是“老板”与“员工”的关系，教师“老板”向学生“员工”下发生产任务单，以项目教学法中的考核办法来衡量学生的学习成果。</dd>
+		<dt style="color:#5086C5">4.环境体验法</dt>
+		<dd>本课程实施真实工作任务的训练——承接社会项目，争取社会的高认可度，让学生设计的首饰能转化为商业饰品，并组织学生下企业，到真实工作环境中去学习，亲眼目睹工作过程，亲身体验岗位任务</dd>
+	</dl>
+</div>
+
+<div class="contrainer-fluid course-content-method-div" style="display: none;">
+	<dl>
+		<dt style="color:#5086C5">1.教学模式的设计 </dt>
+		<dd>（1）项目导向<br>
+		以珠宝首饰企业设计项目为教学模块，将首饰手绘的各主要知识点融合到若干项目化模块中，让学生在完成项目的过程中掌握首饰手绘的基本理念和手绘技能。</dd>
+		<dd>（2）对接欧洲首饰设计标准<br>
+		聘请意大利首饰设计师毛立秋先生（2015年上海市海外名师）为学生授课，让学生接受欧洲首饰设计的先进理念和方法。</dd>
+		<dd>（3）“以赛带练”与商业首饰设计相融合<br>
+		将商业首饰设计和首饰设计大赛相融合，建立实际设计任务与知识、技能的联系，增强了学生的直观体验，激发了学生的学习兴趣。</dd>
+		<dd>4）学历教学与职业资格证书相结合<br>
+		将《高级首饰设计员》职业资格证书中对首饰手绘设计的要求融入到教学过程中，加强高技能人才基本技能的训练，强化实训和综合性训练。</dd>
+		<dt style="color:#5086C5">2. 教学模式的创新</dt>
+		<dd> 基于工作过程项目模块化、对接欧洲首饰设计标准；“以赛带练”与商业首饰设计相融合；学历教学和与职业资格证书相结合。使本课程教学模式从内容、实施到目标得到全面重塑，是在努力实践现代职业教育理念上结合中国国情的创新。</dd>
+	</dl>
+</div>
