--- a/app/views/courses/3/_course_setup.html.erb
+++ b/app/views/courses/3/_course_setup.html.erb
@@ -1,1 +1,29 @@
-_course_setup.html.erb
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-step-nav"><strong>课程设置</strong></a>
+<a href="javascript:void(0)" class="btn course-content-step-nav"><strong>课程性质与作用</strong></a>
+<br><br>
+<div class="container-fluid course-content-step-div">
+	<dl>
+		<dt>一.课程设计的理念</dt>
+		<dd>随着经济全球化和商品化时代的到来，首饰设计的市场化和商业化也是顺应时代发展的大趋势。首饰手绘设计作为一门介于艺术和商业之间的特殊技能，它不但要体现设计者本身的情绪表达和艺术创造，而且也要顺应市场的需求，考虑生产成本和盈利等商业因素。因此高职院校珠宝专业的首饰手绘设计教学，在提高学生的设计能力、创作能力、审美能力的同时，还要提高学生适应市场需求、捕捉时尚趋势的能力。因此，《首饰手绘设计》课程的设计理念是：服务于专业培养目标和定位，将职业岗位群的核心能力和具体工作过程融入到课程设计中，开展任务驱动、项目导向和教学做一体化的教学模式改革，突出教学过程的实践性、开放性和职业性，融“教、学、做”为一体，提高学生的职业技能和职业素质/dd>
+		<dt>二．课程设计的思路</dt>
+		<dd>1.以企业设计项目引领课程教学的实施。根据珠宝首饰企业的设计任务，通过完成一个设计项目以获得设计手绘效果图而进行的一个完整的教学程序。这种项目化的课程体系，实施“教、学、做”一体化教学，有利于学生综合职业能力和素质的培养，达到了高素质技能型专门人才的培养目标，使学生就业后能更快地融入企业实际工作中。</dd>
+		
+		<dd>2.聘请意大利首饰设计师毛立秋先生（2015年上海市海外名师）为学生讲授先进的欧洲首饰设计基本方法、手绘技能和设计理念，将欧洲首饰手绘的基本方法融入到《首饰手绘设计》课程教学中。</dd>
+
+		<dd>3.运用比赛来代替传统封闭的首饰设计实践技能训练，每年参加2-3个具有一定影响力的首饰设计大赛和职业技能大赛，如上海新锐首饰设计大赛、上海首饰设计大赛和首饰设计师职业技能大赛，以比赛要求的设计环境进行全新的首饰手绘教学。</dd>
+		<dd>4.在首饰手绘设计教学中引入商业首设设计，指导学生掌握商业首饰设计的原则：以服务大众、占领市场为目的进行设计创作，还必须要适应大批量机械化生产的要求。</dd>
+	</dl>
+</div>
+
+<div class="container-fluid course-content-step-div" style="display: none">
+	<dl>
+		<dt>一．课程性质</dt>
+			<dd>本课程是珠宝首饰工艺及鉴定专业的专业基础课，安排在第二和第三学期完成，其培养目标是通过学习让学生能基本了解首饰设计基础知识，掌握首饰设计的原理及方法，掌握设计工具的使用方法和使用技巧，熟练运用设计工具。手绘首饰设计是所有首饰设计专业人员必须掌握的基本表现技法，也是在设计过程中最为灵活的技法。这门课程既可作为手绘基础课，又可直接支持学生进行首饰毕业创作设计。<br>本课程是学院的精品课程
+			</dd>
+			<dt>二．课程作用</dt>
+			<dd> 1.通过课程的学习使学生系统掌握首饰设计的基本理论知识及基本的设计原理，掌握首饰设计基本的设计方法、设计程序和工具的使用方法，具备熟练绘制草图的能力。</dd>
+			<dd> 2.能够综合把握首饰的功能、形态、技术、经济等基本要素，设计出符合市场需要的首饰，并通过深入生活，对市场、信息进行调研分析，培养学生的设计表达能力及创造性思维能力。</dd>
+			<dd> 3.通过大量手绘实训让学生运用首饰设计的原理及方法进行首饰的变化练习，得到直观的体会，通过对首饰草图的实训，从简单的图案变化上升到首饰化的设计，了解更多的经典设计的精髓。</dd>
+			<dd>本课程的前期课程有基础绘画、构成设计，后期课程有电脑首饰设计、高级首饰设计师。</dd>
+	</dl>
+</div>
