--- a/app/views/courses/3/_course_team.html.erb
+++ b/app/views/courses/3/_course_team.html.erb
@@ -1,1 +1,54 @@
-_course_team.html.erb
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>教学团队</strong></a>
+<br><br>
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_3/wangjiq.png",width:"200")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">王继青<small>（上海新侨职业技术学院珠宝系）</small></h3>
+    <p style="margin:20px 0">课程负责人&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;高级工艺美术师</p>
+    <p style="margin:10px 0">王继青老师1997年赴马来西亚授奖，作品《大红灯笼高高挂》获北亚区黄金金像奖最具深度美金奖。在展会论坛上演讲中国黄金首饰的设计文化底蕴。2013年受邀赴泰国珠宝展考察，在展会论坛上演讲中国有色宝石的发展前景。2013上海国际首饰时尚节论坛上演讲2013年珠宝首饰设计的流行趋势。</p>
+  </div>
+</div>
+
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_3/maoliq.png",width:"200")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">毛立秋帕尔米夏诺<small>（上海新侨职业技术学院珠宝系）</small></h3>
+    
+    <p style="margin:10px 0">Maurizo Palmiscinao 先生一直专注于对审美的深入研究。他认为珠宝首先应是美的产物，随后才是贸易商品。在设计中他尽力赋予每件作品以意义，将其传递给总是不断寻找精美细节，对每件作品挑剔讲究的客户们。于是他找到了他的客户群：他们热衷于个性化产品，喜欢对自我的关注，从不担心流行趋势。因为个人风格始终不会随波逐流，因为这种风格有自身明确定义的特点即所谓的个性。<br>
+		简言之，Maurizio先生的主要成就是20多年来在珠宝首饰设计领域对审美的不间断研究，能够提供饱含激情，让人兴奋的的产品给自己的客户群体。</p>
+  </div>
+</div>
+
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_3/zhangni.png",width:"200")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">张妮<small>（上海新侨职业技术学院珠宝系）</small></h3>
+    <p style="margin:20px 0">助教&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究生</p>
+    <p style="margin:10px 0">张妮老师2009—2011与香港JIP首饰公司合作，担任品牌设计师，从事商业品牌首饰设计与制作，设计制作的成品首饰在上海田子坊商铺销售。2009—至今，作为上海双城画廊合作首饰艺术家，创作展览个性化艺术首饰。2011—至今，担任上海新侨职业技术学院珠宝系教师，从事珠宝设计与制作相关课程的主讲教师。</p>
+  </div>
+</div>
+
+<div class="media" style="margin:80px 40px;">
+  <div class="media-left" style="padding-right:40px">
+    <a href="#">
+      <%= image_tag("course_3/jiezhen.png",width:"200")%>
+    </a>
+  </div>
+  <div class="media-body" style="font-size:18px; line-height:2;">
+    <h3 class="media-heading">解真<small>（上海新侨职业技术学院珠宝系）</small></h3>
+    <p style="margin:20px 0">助教&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;研究生</p>
+    <p style="margin:10px 0">解真老师于2011-2014任上海新侨职业技术学院的珠宝与艺术设计系教师。发表福田繁雄图形设计对首饰设计的指导性探索、象征性图形符号在首饰设计中的应用研究论文。并在2014年荣获上海市教学成果二等奖。</p>
+  </div>
+</div>
