--- a/app/views/courses/3/_course_resource.html.erb
+++ b/app/views/courses/3/_course_resource.html.erb
@@ -1,1 +1,79 @@
-_course_resource.html.erb
+<%= content_for :script do %>
+  <%= javascript_include_tag  "modal_pdf", 'data-turbolinks-track' => false %>
+<%end%>
+
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>申报材料</strong></a>
+<ul class="container-fluid">
+	<li class="col-sm-12">教学大纲</li>
+  <li class="col-sm-12">
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">首饰手绘设计教学大纲</a>
+    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">课程作业</li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰手绘课程作业汇总</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">PPT课件</li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">设计理念至演绎风格 2</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰的镶嵌工艺</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰三视图与制图</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰设计风格是什么</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰设计是什么</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰设计思维—灵感来自哪里 2</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰手绘设计</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">现代首饰的风格特征</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+   <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新娘首饰的需求</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">模拟试卷</li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰手绘设计模拟试卷一</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰手绘设计模拟试卷二</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰手绘设计模拟试卷三</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰手绘设计模拟试卷四</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰手绘设计模拟试卷五</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+  <li class="col-sm-12">
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰手绘设计模拟试卷六</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+  </li>
+</ul>
