--- a/app/views/courses/3/_course_policy.html.erb
+++ b/app/views/courses/3/_course_policy.html.erb
@@ -1,1 +1,157 @@
-_course_policy.html.erb
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-policy-nav"><strong>特色与创新点</strong></a>
+<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>政策支持与措施</strong></a>
+<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>优秀作品展示</strong></a><br><br>
+
+  
+<div class=" course-content-policy-div">
+  <dl>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 我们的特色</p>
+    <div class="container-fluid">
+      <dd>1．按岗位要求设计学习内容，按实际工作过程设计教学过程，将工作体系与学习体系相对接，在获得知识技能的同时，明确了岗位要求、岗位职责，将岗位要求与职业岗位对接，实现与企业岗位的无缝对接。</dd>
+      <dd>2．选用实际委托项目作为教学项目，可激发学生的创作热情，学生作品即产品，极大地鼓舞了学生的学习积极性，并能将知识、技能、态度融为一体，进行职业素养、职业规范的训练。</dd>
+      <dd>3．项目、任务引领式教学让每个学生明确了项目的要求、标准，也让学生获得了发展的能力，充分挖掘了学生的潜力，学生在学习过程中逐渐清醒地认识到自身的特长，为其今后选择职业、选择岗位，乃至职业生涯发展提供了基础。</dd>
+      <dt>4. 教、学、做一体化</dt>
+      <dd>(1)学习与操作相结合<br>
+      把基础理论知识和具体实践操作紧密结合，采用多媒体教学手段并配以实验演示达到直观的效果。</dd>
+              <dd>(2)多媒体课件形象化教学<br>
+      本课程授课教师全部采用多媒体教学手段，有幻灯片展示、动画演示等，形式多样，生动活泼，提高课堂效率，激发学生学习积极性。</dd>
+              <dd>(3)注重学生个别辅导<br>
+      对少数学习困难的学生进行个别辅导，增强其学习自信心，养成良好学习习惯。</dd>
+              <dd>4)开放性实验室为学生实训提供充分时间保证<br>
+      学生可根据自己的时间到实训室进行手绘的技能熟悉操作，首饰的资料与信息库为学生学习提供了丰富的资源，极大地满足了学生的各种学习需求。
+      </dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 我们的创新点</p>
+    <div class="container-fluid">
+      <p>1.意大利首饰设计师领衔、行业企业一线设计师参与实训教学，保证了课程教学内容的先进性，前瞻性，实训技能的及时性、有效性。</p>
+      <p>2.项目、任务引领课程教学和实训，彻底改变以前学校教学与企业生产实际脱节的现象。</p>
+      <p>3.“以赛带练”与商业首饰设计相融合的教学模式。</p>
+      <p>4.三级实训体系，学生全方位体验职业岗位技能。</p>
+      <p>本课程在近年来的教学中，已形成了具有鲜明职业教育特色的风格——项目、任务引领式教学。即将行业或企业岗位职业要求、场景植入教学过程，选用真实项目，让学生在“企业”里学习，在“工作”中学习，在“岗位”上学习。</p>
+    </div>
+  </dl>
+</div>
+
+<div class=" course-content-policy-div" style="display: none;">
+  <dl>
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 学校对精品课程建设的政策支持与措施及其落实情况</p>
+    <div class="container-fluid">
+      <dd>精品课程建设是教育部“高等学校教学质量与教学改革工程”的重要组成部分，上海市教育委员会将精品课建设纳入上海市高等教育内涵建设“085”工程范畴，也是学校课程建设的重要内容。我院历来重视课程建设工作，采取多种措施促进和保证院重点课程建设工作，促进市级精品课程的形成。学院鼓励精品课程建设的具体政策措施如下：</dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 组织保障</p>
+    <div class="container-fluid">
+      <dd>学院专门成立了课程建设指导委员会，负责全院课程建设的规划制定、立项、评审等工作，加强对课程建设的领导工作，严格按照课程建设立项要求组织中期检查和结题评审，并在整个课程建设过程中实行院系两级监控。对于申报市级精品的课程，特别强调应符合高职高专人才培养的要求，通过"工学结合"，企业学校一起交流，共同开发。突出培养职业能力和职业素养，体现职业性、实践性和开放性要求。
+      </dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 经费保障</p>
+    <div class="container-fluid">
+      <dd>（1）学院经过多年来的不断建设，自2005年以来已投入200余万元建成了计算机实验实训室、软件开发仿真实验室、购置了开发环境软件、用于教学的多媒体电子教室等相应的教学软件；同时，拨出相当经费用于教师的培训，尤其是近两年来，从教学理念、专业技能、校企结合、多媒体制作能力等各方面对教师进行了较全面的培训。
+      </dd>
+      <dd>（2）除上述经费外，学院对精品课程建设所需的实践教学场地和设备，开发校内、外实训基地、课程网站等费用，每年在预算中另行拔出专款，以保证精品课程教学质量的提高，保证精品课程教学条件的完善，保证精品课程的维护与共享。</dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 政策保障</p>
+    <div class="container-fluid">
+      <dd>（1）课程建设有据可依</dd>
+        <dd>我院将精品课程建设作为推进教学改革的核心工作，从制度上保证精品课程建设工作的顺利进行，学院已经出台《新侨职业技术学院关于批准20门重点课程建设的决定》、《新侨职业技术学院精品课程建设实施办法》等相关配套文件，对课程建设提供了政策上的保障。
+      </dd>
+      <dt>（2）项目负责人制</dt>
+        <dd>学院通过项目协议书的形式来明确课程建设负责人、课程所在系及学校三方各自的职责，确保课程建设保质保量按时完成。学院还采取“重点扶植、稳步推进，激励发展”的措施，在抓好学院重点课程的基础上，积极培育市级精品课程。
+      </dd>
+    </div>
+
+    <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 师资保障</p>
+    <div class="container-fluid">
+      <dd>（1）优先引进</dd>
+        <dd>在师资队伍建设方面，优先和保证引进上海市精品课程和校级重点课程建设需要的"双师素质"教师，尤其是来自企业和行业一线的"双师素质"教师。
+        </dd>
+      <dt>（2）政策倾斜</dt>
+        <dd>学院在选拔教师进行职业培训时，参与课程建设的教师给予优先推荐。参与课程建设的教师，每年都有相关培训1-2次。学校对于承担精品课程的教师在津贴、职务晋升等方面给予政策倾斜。
+      </dd>
+    </div>
+
+      <p class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 实践教学条件保障</p>
+    <div class="container-fluid">
+      <dd>（1）现有条件满足</dd>
+        <dd>在实践教学环境建设方面，学院已拥有良好的设施，能保障课程实践教学和改革的顺利实施。
+       </dd>
+      <dt>（（2）加大力度，更上一层楼
+      </dt>
+        <dd>学院将继续加大校内、外实训基地的建设，为课程的实践教学提供更加优良的条件。对今年申报上海市精品课程，学院将按有关政策给予进一步的扶持和鼓励，按一定比例配套经费，保证精品课程建设的顺利进行
+        </dd>
+      <dt>（3）加强检查、督促精品课程的建设，保证质量</dt>
+      <dd>学院对已列为市级的精品课程，每个学期进行一次专门检查，着重检查是否按"建设规划"如期落实。并且，在校内组织推广、交流精品课程，总结精品课程经验，对他课程起到辐射、带动作用。同时，经常听取授课学生对精品课程的评价，督促其不断完善。</dd>
+    </div>
+  </dl>
+</div>
+
+<div class=" course-content-policy-div" style="display: none;">
+  
+    
+    <div class="container-fluid">
+      <div class="row text-center">
+        <div class="col-sm-3">
+          <%= image_tag("course_3/display1.png",width:"240", height:"350")%><br><br>
+        2014年上海市教学成果二等奖
+        </div>
+        <div class="col-sm-3">
+          <%= image_tag("course_3/display2.png",width:"240", height:"350")%><br><br>
+        2013年上海艺术设计展入围奖作品
+        </div>
+        <div class="col-sm-3">
+          <%= image_tag("course_3/display3.png",width:"240", height:"350")%><br><br>
+        第四届国际南洋珠首饰设计比赛银奖
+        </div>
+        <div class="col-sm-3">
+          <%= image_tag("course_3/display4.png",width:"240", height:"350")%><br><br>
+        2014年上海国际首饰设计大赛特殊工艺奖
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-sm-6">
+          <%= image_tag("course_3/display5.png",width:"510", height:"350")%><br><br>
+          首届上海“灰领”职业大赛获奖作品<br><br>
+        </div>
+        <div class="col-sm-6">
+          <%= image_tag("course_3/display6.png",width:"510", height:"350")%><br><br>
+          首届钻石首饰创意设计大赛三等奖<br><br>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-sm-3">
+          <%= image_tag("course_3/display7.png",width:"240", height:"350")%><br><br>
+        第九届梧州国际彩色宝石饰品<br>
+          设计大赛二等奖br><br>
+        </div>
+        <div class="col-sm-3">
+          <%= image_tag("course_3/display8.png",width:"240", height:"350")%><br><br>
+        金都杯第四届全国黄金首饰设计大赛<br>
+        镶嵌类一等奖作品br><br>
+        </div>
+        <div class="col-sm-3">
+          <%= image_tag("course_3/display9.png",width:"240", height:"350")%><br><br>
+        2011年上海旅游节“老凤祥杯”旅游<br>
+        纪念品设计大赛 二等奖（市级奖）<br><br>
+        </div>
+        <div class="col-sm-3">
+          <%= image_tag("course_3/display10.png",width:"240", height:"350")%><br><br>
+        2007年中国首饰设计制作电视大奖赛 <br>
+        首饰设计创意类 二等奖（国家奖）<br><br>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-sm-3">
+          <%= image_tag("course_3/display11.png",width:"240", height:"350")%><br><br>
+          金都杯第四届全国黄金首饰设计大赛<br>
+          镶嵌类优秀奖作品<br><br>
+        </div>
+        <div class="col-sm-6">
+           <%= image_tag("course_3/display12.png",width:"510", height:"350")%><br><br>
+           2004年上海市“灰领”职业大赛一等奖、三等奖作品
+        </div>
+      </div>
+    </div>
+</div>
