--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -2,7 +2,7 @@
 	<div class='single-vedio-content'>
 		<div class="vedio-content">
 			<div class="image-wrapper" style="height: 230px; overflow: hidden;">
-			<% if course.attachment.present? && course.attachment.file_url.present? %>
+			<% if course.image.present? && course.image.avatar.present? %>
 				<%= link_to image_tag("course-show.png"), show_courses_path(course.number), class: 'img', style: "height: 230px" if course.attachment %>
 			<% else %>
 				<%= link_to image_tag(course.try(:image).try(:avatar).url(:c_500_350)), show_courses_path(course.number), class: 'img' if course.attachment %>
