--- a/app/views/courses/after_class.html.erb
+++ b/app/views/courses/after_class.html.erb
@@ -20,11 +20,16 @@
   <div class="top-content">
     <div class="left-content">
       <div class="course-image">
-        <video width="500" height="350" class="mejs-player" poster="<%= (@course.attachment.content.url(:c_500_350))%>" controls="controls" preload="none">
-          <source type="video/mp4" src="<%= @course.attachment.content.url %>" />
-          <source type="video/webm" src="myvideo.webm" />
-          <source type="video/ogg" src="myvideo.ogv" />
-        </video>
+        <!-- 优先选择file_url选项 -->
+        <% unless @course.attachment && @course.attachment.file_url.present? %>
+          <video width="500" height="350" class="mejs-player" poster="<%= (@course.try(:image).try(:avatar).url(:c_500_350))%>" controls="controls" preload="none">
+            <source type="video/mp4" src="<%= @course.attachment.content.url %>" />
+          </video>
+        <% else %>
+          <video width="500" height="350" class="mejs-player" controls="controls" preload="none">
+            <source type="video/mp4" src="<%= @course.attachment.file_url %>" />
+          </video>
+        <% end %>
       </div>
     </div>
     <div class="right-content">
