--- a/app/views/courses/3/_teach_condition.html.erb
+++ b/app/views/courses/3/_teach_condition.html.erb
@@ -1,1 +1,44 @@
-_teach_condition.html.erb
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>教学条件</strong></a>
+<br><br>
+<div class="container-fluid">
+	<dl>
+		<dt>1.校外实训基地</dt>
+			<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 近年来学院分别意大利米兰ADOR协会、上海世玉文化传播有限公司、上海海派玉雕文化协会、周大福珠宝金行（苏州）有限公司、六福珠宝（上海）有限公司、HIERSUN（恒信）钻石上海公司、上海玉成天赐珠宝有限公司等行业内具有较大影响力的企业签署校企合作协议，学院与行业企业通过共建专业、共同开发课程、共建共享实训基地、共育高技能人才、共享校企人才资源、共同开展应用研究与技术服务等方面的密切合作，使学院分享企业资源，更好地实现人才培养、产学研合作、社会服务的三大功能。这些合作企业近年来接纳了大量本专业的学生顶岗实习和就业，是本专业近年来就业率一直保持在98%以上的重要保证。<br >
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;如东海水晶城、苏州渭塘珍珠城、周大福珠宝金行（苏州）有限公司、HIERSUN（恒信）钻石上海公司和上海海派玉雕协会为本专业的教学和顶岗实习基地，每年的教学实习和顶岗实习均在这些基地进行。
+			</dd>
+		<dd>
+			<div class="col-md-6 text-center">
+				<%= image_tag("course_3/shop1.png")%><br><br>
+				学生在周大福新世界店顶岗实习
+			</div>
+			<div class="col-md-6 text-center">
+				<%= image_tag("course_3/shop2.png")%><br><br>
+				学生在渭塘珍珠城进行教学实习
+			</div>
+		</dd>
+		<dt>2.校内实训基地</dt>
+		<dd>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;自2007年起在上海市教委政府扶持资金的资助下，本专业分别建成了珠宝鉴定实训室、珠宝首饰设计实训室、贵金属首饰镶嵌制作实训室、海派玉雕大师工作室及小型生产车间、宝石切磨实训室、珠宝首饰制作小型生产车间、钻石鉴定分级实训室、首饰手绘设计实训室、宝玉石检测中心和“艾达珠宝”店等十几个实训室。其中与本课程密切相关的实训室为：首饰手绘设计实训室、珠宝首饰设计实训室、贵金属首饰镶嵌制作实训室、“艾达珠宝”店和珠宝首饰制作小型生产车间。<br>
+		</dd>
+		<dd>
+			1.珠宝首饰设计实训室<br>配有42个工位，配置计算机、彩色喷墨打印机、平板扫描仪、实物投影仪、数码绘图板等硬件设施及Jewelcad、Photoshot、3D MAX多媒体教学系统等各种应用软件，重点建立具备珠宝首饰产品从设计到输出一体化功能的现代首饰设计实训室。学生经过该实训室培训能达到运用首饰款式模版、计算机珠宝首饰设计软件和配套首饰设计电脑设施等独立完成从手绘设计→计算机三维辅助设计→设计图输出的现代首饰产品设计全过程，并使学生获得上海市首饰设计员高级证书。<br>
+		</dd>
+		<dd>
+			2.贵金属首饰镶嵌制作实训室<br>配备42个工位，配置了工作台、进口锉刀、吊机、压片机、拔丝机、焊枪、抛光机、铁凳、各式铣刀、模头、钢剪、各式钳子、焊机、滚光机等一系列手工制作工具和制作材料，学生通过这个实训室掌握基本的首饰工艺方法，让学生通过真实的制作过程掌握首饰的基本结构，并结合劳动与社会保障部的贵金属首饰手工制作工的鉴定大纲进行培训，让学生掌握首饰题库中30个不同款式的的制作练习，参加上海市劳动与社会保障局的贵金属首饰手工制作工鉴定考试，获得贵金属首饰手工制作工的证书。<br>
+
+		</dd>	
+		<dd>
+			3.艾达珠宝”店和珠宝首饰制作小型生产车间<br>艾达珠宝”店开展的一系列珠宝首饰个性化定制服务可为本课程中学生设计的优秀作品转化为产品提供销售平台，而珠宝首饰制作小型生产车间可将优秀作品制作成商业化的产品，并通过“艾达珠宝”店进行销售。<br>
+		</dd>
+		<dd>
+			<div class="col-md-6 text-center">
+				<%= image_tag("course_3/shop3.png")%><br><br>
+				艾达珠宝店
+			</div>
+			<div class="col-md-6 text-center">
+				<%= image_tag("course_3/shop4.png")%><br><br>
+				贵金属首饰镶嵌制作实训室
+			</div>
+		</dd>
+	</dl>
+</div>
