--- a/app/views/courses/3/_course_content.html.erb
+++ b/app/views/courses/3/_course_content.html.erb
@@ -48,5 +48,7 @@
 		<dd>教学内容的组织遵循学生职业能力培养的基本规律，以真实工作任务及其工作过程为依据整合、优化教学内容，科学设计项目性工作任务，突出教学过程的实践性、开放性和职业性，融“教、学、做”为一体，提高学生的职业技能和职业素质。</dd>
 		<dt style="color:#5086C5">2.教学内容的安排</dt>
 		<dd>具体教学内容安排如下表：</dd>
+        <dd class="text-center"><%= image_tag("course_3/plan1.png")%></dd>
+        <dd class="text-center"><%= image_tag("course_3/plan2.png")%></dd>
 	</dl>
 </div>
