--- a/app/views/courses/3/_course_policy.html.erb
+++ b/app/views/courses/3/_course_policy.html.erb
@@ -27,7 +27,9 @@
       <p>1.意大利首饰设计师领衔、行业企业一线设计师参与实训教学，保证了课程教学内容的先进性，前瞻性，实训技能的及时性、有效性。</p>
       <p>2.项目、任务引领课程教学和实训，彻底改变以前学校教学与企业生产实际脱节的现象。</p>
       <p>3.“以赛带练”与商业首饰设计相融合的教学模式。</p>
-      <p>4.三级实训体系，学生全方位体验职业岗位技能。</p>
+      <p>4.三级实训体系，学生全方位体验职业岗位技能。</p><br>
+      <%= image_tag("course_3/flow.png") %>
+      <br><br>
       <p>本课程在近年来的教学中，已形成了具有鲜明职业教育特色的风格——项目、任务引领式教学。即将行业或企业岗位职业要求、场景植入教学过程，选用真实项目，让学生在“企业”里学习，在“工作”中学习，在“岗位”上学习。</p>
     </div>
   </dl>
