--- a/app/views/courses/2/_course_data.html.erb
+++ b/app/views/courses/2/_course_data.html.erb
@@ -5,11 +5,29 @@
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>申报材料</strong></a>
 <ul class="container-fluid">
   <li class="col-sm-12">
-    <a href="/pdfs/2/高职高专上海市精品课程申报表（蔡长英）-20151010.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">无线网络设备维护 精品课程申报表</a>
-    <a href="/pdfs/2/高职高专上海市精品课程申报表（蔡长英）-20151010.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
+    <a href="/pdfs/2/高职高专上海市精品课程申报表（蔡长英）-20151010.pdf" data-toggle="modal" data-target="#myModal" class="view-pdf">
+	    <div class="col-sm-10">无线网络设备维护 精品课程申报表</div>
+	    <div class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</div>
+    </a>
   </li>
   <li class="col-sm-12">
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">说课视频</a>
     <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;预览</a>
   </li>
 </ul>
+
+<script type="text/javascript">
+	$(function(){
+    $('.view-pdf').on('click',function(){
+        var pdf_link = $(this).attr('href');
+        var iframe = '<object type="application/pdf" data="'+pdf_link+'" width="100%" height="500">不支持该格式，建议替换为pdf格式</object>'
+        $.createModal({
+            title:'无线网络设备维护',
+            message: iframe,
+            closeButton:true,
+            scrollable:false
+        });
+        return false;
+    });
+  })
+</script>
