--- a/app/views/courses/3/_course_content.html.erb
+++ b/app/views/courses/3/_course_content.html.erb
@@ -1,5 +1,5 @@
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-nav"><strong>教学内容的具体表现形式</strong></a>
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-nav"><strong>教学内容的针对性与适用性</strong></a>
+<a href="javascript:void(0)" class="btn course-content-nav"><strong>教学内容的针对性与适用性</strong></a>
 <a href="javascript:void(0)" class="btn course-content-nav"><strong>教学内容的组织与安排</strong></a>
 <br><br>
 <div class="container-fluid course-content-div">
