--- a/app/views/courses/3/_teach_data.html.erb
+++ b/app/views/courses/3/_teach_data.html.erb
@@ -4,26 +4,14 @@
 
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>申报材料</strong></a>
 <ul class="container-fluid">
-	<li class="col-sm-12">教学录像</li>
   <li class="col-sm-12">
-    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-10 view-pdf">解真</a>
-    <a href="/pdfs/1/test.pdf" data-toggle="modal" data-target="#myModal" class="col-sm-2 view-pdf"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    <a href="/pdfs/3/新2015年首饰手绘精品课程申报表（高职）ＨＪＸ.pdf" data-toggle="modal" data-target="#myModal" class="view-pdf">
+      <div class="col-sm-10">新2015年首饰手绘精品课程申报表（高职）ＨＪＸ 精品课程申报表</div>
+      <div class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</div>
+    </a>
   </li>
   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">首饰设计师的构思和方法</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">王继青</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-   <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">张妮</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
-  </li>
-  <li class="col-sm-12">申请表</li>
-  <li class="col-sm-12">
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">新2015年首饰手绘精品课程申报表（高职）ＨＪＸ</a>
-    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;观看</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-10">说课视频</a>
+    <a href="<%= show_courses_path(@course.number, anchor: "main-video")%>" class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;预览</a>
   </li>
 </ul>
