--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -105,5 +105,7 @@
     <%= render partial: "courses/2/main", locals: {teacher_courses: @teacher_courses} %>
   <% elsif @course.number == "49097443" %>
     <%= render partial: "courses/3/main", locals: {teacher_courses: @teacher_courses} %>
+    <% elsif @course.number == "92719269" %>
+    <%= render partial: "courses/4/main", locals: {teacher_courses: @teacher_courses} %>
   <% end %>
 </div>
