--- a/app/views/courses/2/_course_policy.html.erb
+++ b/app/views/courses/2/_course_policy.html.erb
@@ -1,44 +1,38 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>特色与创新</strong></a>
-<br><br>
-<dl>
-  <div class="container-fluid">
-    <dt>特色及政策支持</dt>
-    <dt>1．本课程的特色与创新点</dt>
-    <dt>1.1 人才培养模式的创新</dt>
-    <dd>学院（公益性民办院校）自2011年与大唐电信集团（大型高科技央企）深度合作，按照“优势互补、资源共享、双赢共进”理念，共同承担了教育部“信息化环境下校企协同教学模式探索”课题项目。2014年双方又共同创建了二级学院“大唐信息技术学院”，深入进行校企合作联合培养模式创新，完善了“校企合作，工学结合”校企双主体办学的人才培养模式。 </dd>
-    <dt>1.2 教学团队的创新</dt>
-    <dd>为充分发挥校企专兼教师在专业建设、课程建设中的优势互补作用，我们聘请大唐邦彦（上海）信息技术有限公司的总经理程熙熙为兼职副系主任，聘请上海大唐移动设备有限公司三方优化部总经理程涛为兼职专业主任，聘请大唐邦彦（上海）信息技术有限公司研发部总经理、上海市首席技师李毅杰为兼职骨干教师，校企双方共建“三双”教学团队，即双系副主任（李向明、程熙熙），双专业主任（蔡长英、程涛），双骨干教师（赵健、李毅杰），增强了专业建设的活力。</dd>
-    <dt>1.3 教学模式的创新</dt>
-    <dd>实施“面向工作岗位、基于工作过程、融入职业标准”的校企协同教学模式。依托校企合作共建面向市场的校内实训基地，集专业教学、社会服务、职业资格培训、鉴定、对外展示、交流的真实氛围，让学生“在工作中学习，学习的内容是工作”。使学生各种能力得到广泛锻炼，真正做到零距离与企业接轨。</dd>
-    <dt>1.4 人才培养方案和课程体系的创新</dt>
-    <dd>通信技术专业作为学院信息化项目试点专业， 2013年11月，由来自上海大唐移动通信设备有限公司的8位企业一线优秀员工组成团队，借鉴加拿大DACUM（教学计划开发）模式，对移动通信专业人才核心岗位能力进行研讨分析，得出了DACUM分析表。根据DACUM分析表，我们对通信技术专业的人才培养方案和课程体系进行颠覆性的思考和重构。以企业的岗位需求为依据，将岗位能力所需的知识技能细化，实施知识分解与重组，制订了基于信息化环境下“iDACUM”模式的移动通信专业人才培养方案和课程体系。</dd>
-    <dt>1.5  基于“项目引领、任务驱动”的课程设计</dt>
-    <dd>以就业为导向，将企业项目任务碎片化，课程模块化，划分不同的学习情景，教学过程以学生为主体，教师为主导，培养学生的职业综合能力。</dd>
-    <dt>2．学校对精品课程建设的政策支持与措施</dt>
-    <dd>精品课程建设是教育部“高等学校教学质量与教学改革工程”的重要组成部分，上海市教育委员会将精品课建设纳入上海市高等教育内涵建设“085”工程范畴，也是学校课程建设的重要内容。我院历来重视课程建设工作，采取多种措施促进和保证院重点课程建设工作，促进市级精品课程的形成。学院鼓励精品课程建设的具体政策措施如下：</dd>
-    <dt>2.1  组织保障</dt>
-    <dd>学院专门成立了课程建设指导委员会，负责全院课程建设的规划制定、立项、评审等工作，加强对课程建设的领导工作，严格按照课程建设立项要求组织中期检查和结题评审，并在整个课程建设过程中实行院系两级监控。对于申报市级精品的课程，首先必须是院级重点课程建设中优秀的，同时，特别强调应符合高职高专人才培养的要求，通过“工学结合”，企业学校一起交流，共同开发。并且有一支专兼结合的“双师素质”教师队伍，突出培养职业能力和职业素养，体现职业性、实践性和开发性要求。</dd>
-    <dt>2.2  经费保障</dt>
-    <dd>（1）学院经过多年来的不断建设，自2011年以来校企双方已投入近千万元建成了大唐移动通信人才培养和移动互联网人才培养基地；同时，拨出相当经费用于教师的培训，尤其是近两年来，从教学理念、专业技能、校企结合、多媒体制作能力等各方面对教师进行了较全面的培训。</dd>
-  <dd>（2）除上述经费外，学院对精品课程建设所需的实践教学场地和设备，开发校内、外实训基地、课程网站等费用，每年在预算中另行拔出专款，以保证精品课程教学质量的提高，保证精品课程教学条件的完善，保证精品课程的维护与共享。</dd>
-  <dt>2.3  政策保障</dt>
-  <dd>（1）课程建设有据可依
-		我院将精品课程建设作为推进教学改革的核心工作，从制度上保证精品课程建设工作的顺利进行，学院已经出台《上海工商职业技术学院关于批准20门重点课程建设的决定》、《上海工商职业技术学院精品课程建设实施办法》等相关配套文件，对课程建设提供了政策上的保障。
-	</dd>
-	<dd>（2）项目负责人制
-		学院通过项目协议书的形式来明确课程建设负责人、课程所在系及学校三方各自的职责，确保课程建设保质保量按时完成。学院还采取“重点扶植、稳步推进，激励发展”的措施，在抓好学院重点课程的基础上，积极培育市级精品课程。
-	</dd>
-	<dt></dt>
-	<dd>2.4 师资保障</dd>
-	<dt>（1）校企联合招聘</dt>
-	<dd>高职院校受限于规模与师资待遇偏低的不利条件，教师技能水平、实战能力、技术先进性都落后于行业发展。学院积极加强与具有国际创新能力的大型企业大唐集团深度合作，以计算机信息系及移动互联网专业群为基础，校企共同成立二级学院“大唐信息技术学院”。在校企联合培养移动互联网行业人才的同时，围绕师资队伍建设做出创新探索与实践。校企双方通过联合招聘的方式解决了这个问题。联合招聘以双方中得一方为用人单位主体，通过共同承担人力成本，提升了入职人员得实际收入，提高了选人标准和高端人才落地成功率，达到了学校获得优秀教师、学生获得更好的师资、高端人才更倾向于教育行业就业、企业降低了研发成本四方共赢的良好效果。</dd>
-	<dt>（2）政策倾斜</dt>
-	<dd>学院在选拔教师进行职业培训时，参与课程建设的教师给予优先推荐。参与课程建设的教师，每年都有相关培训1-2次。学校对于承担精品课程的教师在津贴、职务晋升等方面给予政策倾斜。</dd>
-  </div>
-  <dt>5. 实践教学条件保障</dt>
-  <dt>（1）现有条件满足</dt>
-  <dd>在实践教学环境建设方面，学院已拥有良好的设施，能保障课程实践教学和改革的顺利实施。</dd>
-  <dt>（2）加大力度，更上一层楼</dt>
-  <dd>学院将继续加大校内、外实训基地的建设，为课程的实践教学提供更加优良的条件。对今年申报上海市精品课程，学院将按有关政策给予进一步的扶持和鼓励，按一定比例配套经费，保证精品课程建设的顺利进行。</dd>
-  <dd>学院对已列为市级的精品课程，每个学期进行一次专门检查，着重检查是否按“建设规划”如期落实。并且，在校内组织推广、交流精品课程，总结精品课程经验，对他课程起到辐射、带动作用。同时，经常听取授课学生对精品课程的评价，督促其不断完善。</dd>
-</dl>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-policy-nav"><strong>本课程的特色与创新点</strong></a>
+<a href="javascript:void(0)" class="btn course-content-policy-nav"><strong>学校的政策支持与措施</strong></a><br><br>
+<div class="container-fluid course-content-policy-div">
+  <dl>
+    <dt>1. 人才培养模式的创新</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本专业与大唐电信集团深度合作，建立了“校企合作、产教融合、工学结合”的人才培养模式，获批2015年上海高等职业教育质量提升计划项目：《移动互联网产业创新人才校企联合培养基地》（产教研协同基地）。在产教研协同基地下，设立了3个平台，分别是： </dd>
+    <dd>（1） 工学结合实践中心（集职业培训、职业技能鉴定和社会服务为一体的综合实践中心。）</dd>
+    <dd>（2） 上海市首席技师李毅杰移动互联网工作室（提升骨干教师教学科研水平，提高学生技能水平）</dd>
+    <dd>（3） 研发与孵化创新中心（实现O2O教学平台，综合运用大数据、云计算技术解决在线教育可视化实时性互动的问题）</dd>
+    <dt>2. 教学团队的创新</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;为充分发挥校企专兼教师在专业建设、课程建设中的优势互补作用，我们聘请大唐邦彦（上海）信息技术有限公司的总经理程熙熙为兼职副系主任，聘请上海大唐移动设备有限公司三方优化部总经理程涛为兼职专业主任，聘请大唐邦彦（上海）信息技术有限公司研发部总经理、上海市首席技师李毅杰为兼职骨干教师，校企双方共建“三双”教学团队，即双系副主任（李向明、程熙熙），双专业主任（蔡长英、程涛），双骨干教师（赵健、李毅杰），增强了专业建设的活力。</dd>
+    <dt>3. 教学模式的创新</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;实施“面向工作岗位、基于工作过程、融入职业标准”的校企协同教学模式。依托校企合作共建面向市场的校内实训基地，集专业教学、社会服务、职业资格培训、鉴定、对外展示、交流的真实氛围，让学生“在工作中学习，学习的内容是工作”。使学生各种能力得到广泛锻炼，真正做到零距离与企业接轨。</dd>
+    <dt>4. 人才培养方案和课程体系的创新</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;通信技术专业作为学院信息化项目试点专业， 2013年11月，由来自上海大唐移动通信设备有限公司的8位企业一线优秀员工组成团队，借鉴加拿大DACUM（教学计划开发）模式，对移动通信专业人才核心岗位能力进行研讨分析，得出了DACUM分析表。根据DACUM分析表，我们对通信技术专业的人才培养方案和课程体系进行颠覆性的思考和重构。以企业的岗位需求为依据，将岗位能力所需的知识技能细化，实施知识分解与重组，制订了基于信息化环境下“iDACUM”模式的移动通信专业人才培养方案和课程体系。</dd>
+  </dl>
+</div>
+<!-- 学校的政策支持与措施 -->
+<div class="container-fluid course-content-policy-div" style="display:none;">
+  <dl>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;精品课程建设是教育部“高等学校教学质量与教学改革工程”的重要组成部分，上海市教育委员会将精品课建设纳入上海市高等教育内涵建设“085”工程范畴，也是学校课程建设的重要内容。我院历来重视课程建设工作，采取多种措施促进和保证院重点课程建设工作，促进市级精品课程的形成。学院鼓励精品课程建设的具体政策措施如下：</dd>
+    <dt>1. 组织保障</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;学院专门成立了课程建设指导委员会，负责全院课程建设的规划制定、立项、评审等工作，加强对课程建设的领导工作，严格按照课程建设立项要求组织中期检查和结题评审，并在整个课程建设过程中实行院系两级监控。对于申报市级精品的课程，首先必须是院级重点课程建设中优秀的，同时，特别强调应符合高职高专人才培养的要求，通过“工学结合”，企业学校一起交流，共同开发。并且有一支专兼结合的“双师素质”教师队伍，突出培养职业能力和职业素养，体现职业性、实践性和开发性要求。</dd>
+    <dt>2. 经费保障</dt>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;（1）学院经过多年来的不断建设，自2011年以来校企双方已投入近千万元建成了大唐移动通信人才培养和移动互联网人才培养基地；同时，拨出相当经费用于教师的培训，尤其是近两年来，从教学理念、专业技能、校企结合、多媒体制作能力等各方面对教师进行了较全面的培训。</dd>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;（2）除上述经费外，学院对精品课程建设所需的实践教学场地和设备，开发校内、外实训基地、课程网站等费用，每年在预算中另行拔出专款，以保证精品课程教学质量的提高，保证精品课程教学条件的完善，保证精品课程的维护与共享。</dd>
+    <dt>3. 政策保障</dt>
+    <dd>（1）课程建设有据可依</dd>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我院将精品课程建设作为推进教学改革的核心工作，从制度上保证精品课程建设工作的顺利进行，学院已经出台《上海工商职业技术学院关于批准20门重点课程建设的决定》、《上海工商职业技术学院精品课程建设实施办法》等相关配套文件，对课程建设提供了政策上的保障。</dd>
+    <dd>（2）项目负责人制</dd>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;学院通过项目协议书的形式来明确课程建设负责人、课程所在系及学校三方各自的职责，确保课程建设保质保量按时完成。学院还采取“重点扶植、稳步推进，激励发展”的措施，在抓好学院重点课程的基础上，积极培育市级精品课程。</dd>
+    <dt>4. 师资保障</dt>
+    <dd>（1）校企联合招聘</dd>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;高职院校受限于规模与师资待遇偏低的不利条件，教师技能水平、实战能力、技术先进性都落后于行业发展。学院积极加强与具有国际创新能力的大型企业大唐集团深度合作，以计算机信息系及移动互联网专业群为基础，校企共同成立二级学院“大唐信息技术学院”。在校企联合培养移动互联网行业人才的同时，围绕师资队伍建设做出创新探索与实践。校企双方通过联合招聘的方式解决了这个问题。联合招聘以双方中得一方为用人单位主体，通过共同承担人力成本，提升了入职人员得实际收入，提高了选人标准和高端人才落地成功率，达到了学校获得优秀教师、学生获得更好的师资、高端人才更倾向于教育行业就业、企业降低了研发成本四方共赢的良好效果。</dd>
+    <dd>（2）政策倾斜</dd>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;学院在选拔教师进行职业培训时，参与课程建设的教师给予优先推荐。参与课程建设的教师，每年都有相关培训1-2次。学校对于承担精品课程的教师在津贴、职务晋升等方面给予政策倾斜</dd>
+  </dl>
+</div>
