--- a/app/views/courses/2/_teach_condition.html.erb
+++ b/app/views/courses/2/_teach_condition.html.erb
@@ -1,4 +1,4 @@
-<dl>
+<!-- <dl>
   <dd class="entry-content-title"><span class="glyphicon glyphicon-triangle-bottom"></span> 教学条件</dd>
   <div class="container-fluid">
     <dl>
@@ -111,4 +111,5 @@
       <dd>“工学结合实践中心”平台以移动互联网产业发展和人才需求为导向，确保最新技术的迭代更新，确立机制把企业研发项目转化为教学项目。具备进行物联网硬件接口设计、软件编程设计和嵌入式软硬件应用设计开发功能。承担技能鉴定考试培训，能够开展真实、仿真与虚拟相结合的项目实训，形成集职业培训、职业技能鉴定和社会服务为一体的综合实践中心，紧密对接产业需求的人才同时具备移动在线学习和实时互动功能。</dd>
     </dl>
   </div>
-</dl>
+</dl> -->
+<%= render partial: "courses/2/course_condition", locals: {course: @course} %>
