--- a/app/views/courses/2/_course_content.html.erb
+++ b/app/views/courses/2/_course_content.html.erb
@@ -6,13 +6,13 @@
 <div class="container-fluid course-content-div">
 	<dl>
 	  <dt>1. 教学内容的选取</dt>
-	  <dd>该课程引入项目教学法、任务驱动教学法、场景模拟教学法。该课程以企业真实的项目为导向，把企业项目序化成适合教学的教学项目，根据子项目的性质，将课程内容精心设计为若干个任务，其中包括总任务、模块任务、子任务等不同大小的任务。</dd>
-	  <dd>为了使该课程内容的选择与市场需求更好的衔接，我系在学院领导的大力支持下与大唐电信集团下属公司上海大唐移动通设备有限公司、大唐邦彦（上海）信息技术有限公司建立了深度校企合作关系，由于市面上与该课程相关的书籍极为匮乏，也没有与高职类学生学习相匹配的学习教材，我系与企业合作开发适合我院学生学习的校本教材，校本教材中大量融合优秀的、适合教学的企业项目。课程内容的选取依据岗位需求。该课程引入综合性的企业真实项目，这些综合项目可以分解成若干个子项目分布于课程中的各个知识点。</dd>
-	  <dd>该课程的每一个子项目内容的选择分成两在部分：第一部分是基础知识。一般企业的项目复杂无序，不适合教学，要先对企业真实案例进行分析，抽取出相关的理论点，理论点不进行展开，以“必需、够用”为度，突出应用，通过基础知识的学习让学生能实现一些简单实用的项目，来激发学生学习的兴趣；第二部分是结合实际网络系统的软硬件平台安装，平台软件操作，参数调测和数据库修改。此部分内容多且杂乱，应多举实例，通过实例来讲解知识点，这样既激发了学生的兴趣又突出了实例环节，还可以通过实例把前面所学的基础知识运用进来，不至于各个环节脱节，注重培养学生解决实际问题的能力。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;该课程引入项目教学法、任务驱动教学法、场景模拟教学法。该课程以企业真实的项目为导向，把企业项目序化成适合教学的教学项目，根据子项目的性质，将课程内容精心设计为若干个任务，其中包括总任务、模块任务、子任务等不同大小的任务。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;为了使该课程内容的选择与市场需求更好的衔接，我系在学院领导的大力支持下与大唐电信集团下属公司上海大唐移动通设备有限公司、大唐邦彦（上海）信息技术有限公司建立了深度校企合作关系，由于市面上与该课程相关的书籍极为匮乏，也没有与高职类学生学习相匹配的学习教材，我系与企业合作开发适合我院学生学习的校本教材，校本教材中大量融合优秀的、适合教学的企业项目。课程内容的选取依据岗位需求。该课程引入综合性的企业真实项目，这些综合项目可以分解成若干个子项目分布于课程中的各个知识点。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;该课程的每一个子项目内容的选择分成两在部分：第一部分是基础知识。一般企业的项目复杂无序，不适合教学，要先对企业真实案例进行分析，抽取出相关的理论点，理论点不进行展开，以“必需、够用”为度，突出应用，通过基础知识的学习让学生能实现一些简单实用的项目，来激发学生学习的兴趣；第二部分是结合实际网络系统的软硬件平台安装，平台软件操作，参数调测和数据库修改。此部分内容多且杂乱，应多举实例，通过实例来讲解知识点，这样既激发了学生的兴趣又突出了实例环节，还可以通过实例把前面所学的基础知识运用进来，不至于各个环节脱节，注重培养学生解决实际问题的能力。</dd>
 	  <dt>2. 针对性和适用性</dt>
-	  <dd>任务驱动教学方法中学生是学习过程的主体, 教师是该过程的设计者和组织者，能够充分发挥学生的主体作用，培养学生的综合能力。</dd>
-	  <dd>教学过程中，学生在不同的学习阶段完成不同的任务，每个任务均含有适量的新知识点和认知冲突, 任务有一定的弹性和开放性。学生在完成任务的过程中, 积极主动地探索各种解决任务的途径, 并且选择最佳方案。</dd>
-	  <dd>在教学内容选取过程中，以职业素养和职业能力培养为核心，由校企共同开发按照行为导向的教学理念选取组织教学内容，充分体现职业性、实践性、开放性的要求；同时内容兼顾了知识、能力的可移植性，为学生可持续发展奠定良好基础。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;任务驱动教学方法中学生是学习过程的主体, 教师是该过程的设计者和组织者，能够充分发挥学生的主体作用，培养学生的综合能力。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;教学过程中，学生在不同的学习阶段完成不同的任务，每个任务均含有适量的新知识点和认知冲突, 任务有一定的弹性和开放性。学生在完成任务的过程中, 积极主动地探索各种解决任务的途径, 并且选择最佳方案。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在教学内容选取过程中，以职业素养和职业能力培养为核心，由校企共同开发按照行为导向的教学理念选取组织教学内容，充分体现职业性、实践性、开放性的要求；同时内容兼顾了知识、能力的可移植性，为学生可持续发展奠定良好基础。</dd>
   </dl>
 </div>
 
@@ -21,7 +21,7 @@
 <div class="container-fluid course-content-div" style="display: none;">
 	<dl>
 	  <dt>1. 教学内容的组织</dt>
-	  <dd>教学内容的组织以项目实践教学为主，通过项目实践的手段，真实再现移动通信各各的具体工作内容。教学内容组织过程中让学员自己通过对案例的理解与分析，以及在项目组中的共同讨论，促使学员进入具有强烈现场感的情景与过程，养成正确的工作习惯，良好的行为规范和优秀的职业作风。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;教学内容的组织以项目实践教学为主，通过项目实践的手段，真实再现移动通信各各的具体工作内容。教学内容组织过程中让学员自己通过对案例的理解与分析，以及在项目组中的共同讨论，促使学员进入具有强烈现场感的情景与过程，养成正确的工作习惯，良好的行为规范和优秀的职业作风。</dd>
 	  <dd>实施过程：</dd>
 	  <dd>（1）项目选择和学生分组。以项目来划分项目组。建立对不同岗位需求与角色的认知，并以平时成绩平均安排每个小组的技术实力。</dd>
 	  <dd>（2）实践项目模拟企业真实的小型项目，这些项目真实且有社会效益，规模和难度适中，容易理解，可以激发学生的开发兴趣。</dd>
@@ -282,14 +282,14 @@
 <div class="container-fluid course-content-div" style="display: none;">
 	<dl>
 	  <dt>1.  引入企业真实项目，编写校本教材</dt>
-	  <dd>为了使该课程内容的选择与市场需求更好的衔接，我系在学院领导的大力支持下与大唐电信集团下属公司上海大唐移动通设备有限公司、大唐邦彦（上海）信息技术有限公司建立了深度校企合作关系。由于市面上与该课程相关的书籍极为匮乏，也没有与高职类学生学习相匹配的学习教材，我系与企业合作开发适合我院学生学习的校本教材，校本教材中大量融合优秀的、适合教学的企业项目。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;为了使该课程内容的选择与市场需求更好的衔接，我系在学院领导的大力支持下与大唐电信集团下属公司上海大唐移动通设备有限公司、大唐邦彦（上海）信息技术有限公司建立了深度校企合作关系。由于市面上与该课程相关的书籍极为匮乏，也没有与高职类学生学习相匹配的学习教材，我系与企业合作开发适合我院学生学习的校本教材，校本教材中大量融合优秀的、适合教学的企业项目。</dd>
 	  <dt>2. 与企业工程师编写校本实验、实训讲义</dt>
-	  <dd>我们根据学生实验、实训的具体情况，以职业岗位的具体要求为切入点、以项目为主线，以工作过程为导向，与统编教材相结合使用，既有创新，又有经典，满足了高职教育的理念要求。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我们根据学生实验、实训的具体情况，以职业岗位的具体要求为切入点、以项目为主线，以工作过程为导向，与统编教材相结合使用，既有创新，又有经典，满足了高职教育的理念要求。</dd>
 	  <dt>3.  其它教学资料齐全</dt>
-	  <dd>校企合作共同编写了实验、实训指导书、习题库和试题库、拓展训练、电子课件、电子教案教学资源等，并配合实训平台，方便学生课后进一步练习和操作，能够满足学生全方位对教学资源和学习资源的需求。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;校企合作共同编写了实验、实训指导书、习题库和试题库、拓展训练、电子课件、电子教案教学资源等，并配合实训平台，方便学生课后进一步练习和操作，能够满足学生全方位对教学资源和学习资源的需求。</dd>
 	  <dt>4. 录制教学演示录像 </dt>
-	  <dd>录制教学演示录像，供学生在线学习和观看，为学生自主学习提供平台。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录制教学演示录像，供学生在线学习和观看，为学生自主学习提供平台。</dd>
 	  <dt>5. 建立满足课程教学需要的网络教学资源</dt>
-	  <dd>建设了符合课程设计要求并利于学生职业能力培养的教学资源，包括：多媒体课件、电子教案、实训报告手册、实验演示录像等，为学生的自主学习提供了丰富有效的资料。</dd>
+	  <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;建设了符合课程设计要求并利于学生职业能力培养的教学资源，包括：多媒体课件、电子教案、实训报告手册、实验演示录像等，为学生的自主学习提供了丰富有效的资料。</dd>
   </dl>
 </div>
