--- a/app/views/courses/2/_course_setup.html.erb
+++ b/app/views/courses/2/_course_setup.html.erb
@@ -1,32 +1,46 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-step-nav"><strong>课程定位</strong></a>
-<a href="javascript:void(0)" class="btn course-content-step-nav"><strong>课程设计</strong></a>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg course-content-step-nav"><strong>课程性质与作用</strong></a>
+<a href="javascript:void(0)" class="btn course-content-step-nav"><strong>课程设置依据</strong></a>
+<a href="javascript:void(0)" class="btn course-content-step-nav"><strong>课程设计的理念与思路</strong></a>
 <br><br>
 <div class="container-fluid course-content-step-div">
 	<dl>
-		<dt>1．课程性质与作用</dt>
-		<dd>《无线网络设备维护》是通信工程专业的重点核心课程，通过本课程的学习，学生能够学习到移动通信网络建设工程必备的知识和技能：3G、4G移动通信网络架构，系统运行机制，软硬件平台，LMT基站维护工具使用，OMT远程网络管理工具使用，OSP设备底层维护工具使用，ATP信令流程跟踪，Solaris系统的安装操作，Oracle在移动通信中的实用技能，IUB，SI/X2，Ir，Itf-B，Tb接口建立，基站的升级和割接等，基本具备移动通信初级设备维护工程师的能力。</dd>
-		<dd>本课程以DTCE（大唐）的职业标准为依据，与大唐电信集团下属公司上海大唐移动通设备有限公司、大唐邦彦（上海）信息技术有限公司建立了深度校企合作关系。本课程以市场为导向，以服务为宗旨，为社会培养高级应用型人才的职业标准为依据，根据高校人才培养计划，结合高校人才培养目标和当前行业需求，采用准企业化管理及学习方式，与企业共同开发教学解决方案，分层次、阶梯式逐步加强学生实践能力和创新精神的培养，加深理论知识的理解和贯通的同时，进行综合能力培养，并积累一定的实际项目开发和项目管理经验，通过这种校企合作“人才共育、过程共管、成果共享、责任共担”的指导思想，加强通信专业学员在就业前的技能培训，培养出多层次、复合型、实用型、创新型的具有竞争力的高素质高技能人才，填平毕业生与企业需求之间的鸿沟。</dd>
-		<dt>2．课程设计的理念与思路</dt>
-		<dt>2.1课程设计的理念</dt>
-		<dt>(1)教学过程与企业用人要求对接，课程内容与职业标准对接</dt>
-		<p>学习过程与典型的工作过程的对接</p>
-		<p>教师与现场工程师的对接</p>
-		<p>训练项目与实际项目的对接</p>
-		<p>工作能力与企业用人要求的对接</p>
-		<dt>(2) 基于岗位需求的人才培养</dt>
-		<dd>根据不同的岗位需求来培养学生，在课程的学习与实践过程中注重培养学生的职业岗位素质与能力。</dd>
-		<dt>2.2课程设计的思路</dt>
-		<dd>本课程一直由学校专任教师和企业资深工程师合作授课。专任教师具有丰富的课堂教学经验，擅长于知识的讲解与传授，企业工程师非常了解市场对人才的需求，有丰富的实际工作经验，能够营造真实的企业工作环境，带领学生做真实的企业项目，更好的培养学生的职业能力。</dd>
-		<dt>(1)为学生提供企业环境和工程项目</dt>
-		<dd>本课程的建设与改革全过程与大唐电信集团合作。本课程充分利用校园CRP教学管理系统，掌握学生的学习动态，实施“因材施教”，学习能力强的团队可以高速，高质量的完成任务，能力略差的团队则可以在平台的帮助下进入下一阶段的学习。</dd>
-		<dt>(2)引入项目教学法，以任务驱动为载体做教学设计</dt>
-		<dd>将企业提供的真实项目适当简化，序化，划分不同的学习任务，便于学生学习的循序渐进，螺旋式上升。该课程的课程设计着眼于传授职业能力，包括以下方面：</dd>
-		<dd>a.专业能力</dd>
-		<dd>使用真实的企业项目，分解项目，细化任务，培养学生无线网络设备维护的专业能力。 </dd>
-		<dd>b.社会能力</dd>
-    <dd>在企业工作流程中能够自我工作，并能配合同伴进行有组织的工作，良好的团队合作意识。</dd>
-    <dd>c.方法能力</dd>
-    <dd>学会评价产品，有将产品进一步优化的意识。在学生阶段就开始培养优化产品的意识，工作不敷衍了事，追求更好。这是我们需要更加重视的职业能力。</dd>
-    <dd>每个学习任务经历特定的过程，然后进入下一个学习任务，知识螺旋式上升。学生根据自己的能力制定具体工作计划，让优秀学生“冒尖”，同时不会打击能力差的学生的积极性，不会出现部分学生因为跟不上而放弃学习的情景。</dd>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;《无线网络设备维护》是通信工程专业的重点核心课程，通过本课程的学习，学生能够学习到移动通信网络建设工程必备的知识和技能：3G、4G移动通信网络架构，系统运行机制，软硬件平台，LMT基站维护工具使用，OMT远程网络管理工具使用，OSP设备底层维护工具使用，ATP信令流程跟踪，Solaris系统的安装操作，Oracle在移动通信中的实用技能，IUB，SI/X2，Ir，Itf-B，Tb接口建立，基站的升级和割接等，基本具备移动通信初级设备维护工程师的能力。</dd>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本课程以DTCE（大唐）的职业标准为依据，与大唐电信集团下属公司上海大唐移动通设备有限公司、大唐邦彦（上海）信息技术有限公司建立了深度校企合作关系。本课程以市场为导向，以服务为宗旨，为社会培养高级应用型人才的职业标准为依据，根据高校人才培养计划，结合高校人才培养目标和当前行业需求，采用准企业化管理及学习方式，与企业共同开发教学解决方案，分层次、阶梯式逐步加强学生实践能力和创新精神的培养，加深理论知识的理解和贯通的同时，进行综合能力培养，并积累一定的实际项目开发和项目管理经验，通过这种校企合作“人才共育、过程共管、成果共享、责任共担”的指导思想，加强通信专业学员在就业前的技能培训，培养出多层次、复合型、实用型、创新型的具有竞争力的高素质高技能人才，填平毕业生与企业需求之间的鸿沟。</dd>
 	</dl>
+</div>
+<!-- 课程设置依据 -->
+<div class="container-fluid course-content-step-div" style="display:none;">
+	<dl>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本课程以市场为导向，以服务为宗旨，与大唐电信集团下属公司上海大唐移动通设备有限公司、大唐邦彦（上海）信息技术有限公司建立深度校企合作关系。2013年11月，由来自上海大唐移动通信设备有限公司的9位企业一线优秀员工组成团队，借鉴加拿大DACUM（教学计划开发）模式，对通信技术专业（移动通信方向）人才核心岗位能力进行分析，得出了DACUM分析表。《无线网络设备维护》课程的设置就是以企业的岗位需求为依据，将岗位能力所需的知识技能细化，实施知识分解与重组，从而制订出全新的课程体系。 </dd>
+		<dd class="col-md-6 text-center"><%= image_tag("course_2/setup-1.png")%><br>通信技术（移动通信方向）DACUM分析专家</dd>
+    <dd class="col-md-6 text-center"><%= image_tag("course_2/setup-2.png")%><br>《无线网络设备维护》课程工作任务与职业能力分析</dd>
+	</dl>
+
+</div>
+<!-- 课程设计的理念与思路 -->
+<div class="container-fluid course-content-step-div" style="display:none;">
+	<dl>
+		<dt>1. 课程设计的理念</dt><br>
+		<dt>(1)教学过程与企业用人要求对接，课程内容与职业标准对接</dt><br>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;学习过程与典型的工作过程的对接</p>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;教师与现场工程师的对接</p>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;训练项目与实际项目的对接</p>
+		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;工作能力与企业用人要求的对接</p>
+		<dt>(2) 基于岗位需求的人才培养</dt>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;根据不同的岗位需求来培养学生，在课程的学习与实践过程中注重培养学生的职业岗位素质与能力。</dd>
+		<dt>2. 课程设计的思路</dt>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本课程一直由学校专任教师和企业资深工程师合作授课。专任教师具有丰富的课堂教学经验，擅长于知识的讲解与传授，企业工程师非常了解市场对人才的需求，有丰富的实际工作经验，能够营造真实的企业工作环境，带领学生做真实的企业项目，更好的培养学生的职业能力。</dd>
+		<dt>(1)为学生提供企业环境和工程项目</dt>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本课程的建设与改革全过程与大唐电信集团合作。本课程充分利用校园CRP教学管理系统，掌握学生的学习动态，实施“因材施教”，学习能力强的团队可以高速，高质量的完成任务，能力略差的团队则可以在平台的帮助下进入下一阶段的学习。</dd>
+		<dt>(2)引入项目教学法，以任务驱动为载体做教学设计</dt>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;将企业提供的真实项目适当简化，序化，划分不同的学习任务，便于学生学习的循序渐进，螺旋式上升。该课程的课程设计着眼于传授职业能力，包括以下方面：</dd>
+		<dd>a.专业能力</dd>
+		<dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;使用真实的企业项目，分解项目，细化任务，培养学生无线网络设备维护的专业能力。 </dd>
+		<dd>b.社会能力</dd>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在企业工作流程中能够自我工作，并能配合同伴进行有组织的工作，良好的团队合作意识。</dd>
+    <dd>c.方法能力</dd>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;学会评价产品，有将产品进一步优化的意识。在学生阶段就开始培养优化产品的意识，工作不敷衍了事，追求更好。这是我们需要更加重视的职业能力。</dd>
+    <dd>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;每个学习任务经历特定的过程，然后进入下一个学习任务，知识螺旋式上升。学生根据自己的能力制定具体工作计划，让优秀学生“冒尖”，同时不会打击能力差的学生的积极性，不会出现部分学生因为跟不上而放弃学习的情景。</dd>
+	</dl>
+
 </div>
